syntax = "proto3";

package auth;

option go_package = "./internal/pb";

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc Validate(ValidateRequest) returns (ValidateResponse) {}
  rpc Verify(VerifyRequest) returns (VerifyResponse) {}
}

// Register

message RegisterRequest {
  string phone = 1;
  string password = 2;
  string name = 3;
  string role = 4;
  string dateOfBirth = 5;
}

message RegisterResponse {
  int64 status = 1;
  string error = 2;
}

// Login

message LoginRequest {
  string phone = 1;
  string password = 2;
}

message LoginResponse {
  int64 status = 1;
  string error = 2;
  string token = 3;
}

// Validate

message ValidateRequest { string token = 1; }

message ValidateResponse {
  int64 status = 1;
  string error = 2;
  int64 userId = 3;
}

// Verify

message VerifyRequest {
  string phone = 1;
  string token = 2;
  // string code = 2;
}

message VerifyResponse {
  int64 status = 1;
  string error = 2;
}